Removed changes in README.md